# kanata

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.claude/: CLAUDE.md  README.md  settings.json
.claude/standards/: 00-overview.md  01-code-style.md  02-error-handling.md  03-testing.md  04-git-workflow.md  05-directory-structure.md  99-quick-ref.md
.github/workflows/: ci.yml  release.yml
crates/kanata-cli/: Cargo.toml
crates/kanata-cli/src/: main.rs
crates/kanata-core/: Cargo.toml
crates/kanata-core/src/: agent.rs  context.rs  dispatcher.rs  lib.rs  memory.rs  mock.rs  prompt.rs  undo.rs
crates/kanata-core/tests/: integration.rs
crates/kanata-model/: Cargo.toml
crates/kanata-model/src/: client.rs  key_pool.rs  lib.rs  mock.rs  retry.rs  token.rs
crates/kanata-model/src/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs
crates/kanata-skills/: Cargo.toml
crates/kanata-skills/src/: builtin.rs  lib.rs  loader.rs
crates/kanata-tools/: Cargo.toml
crates/kanata-tools/src/: bash.rs  edit.rs  glob.rs  grep.rs  lib.rs  read.rs  registry.rs  safety.rs  write.rs
crates/kanata-types/: Cargo.toml
crates/kanata-types/src/: config.rs  error.rs  lib.rs  llm.rs  message.rs  session.rs  skill.rs  tool.rs
docs/: README.md
docs/architecture/: EXECUTION-PLAN.md  TECH-STANDARDS.md
docs/process/: COLLABORATION-GUIDE.md
docs/product/: PRD-SUPPLEMENT.md  PRD.md
