[package]
name = "kanata-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kanata-types = { path = "../kanata-types" }
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
tempfile = "3"
kanata-tools = { path = "../kanata-tools" }
