[package]
name = "kanata-model"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kanata-types = { path = "../kanata-types" }
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
bytes = "1"
