[package]
name = "kanata-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kanata-types = { path = "../kanata-types" }
serde.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
serde_json.workspace = true
