[package]
name = "kanata-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kanata-types = { path = "../kanata-types" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
globset.workspace = true
regex.workspace = true
walkdir.workspace = true
